--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <title>HELL SEX</title>
+  <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" type="text/css" href="css/style.css">  
 </head>
 
 <body>
