--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="css/style.css">  
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+ 
+   <script type="text/javascript" src="assets/js/script.js"></script>
 </head>
 
 <body>
   <h1>HELL SEX</h1>
   <h2>FUCKK NAMASTE</h2>
+ <div></div>
  
   <p>
   YES YES YES 
