--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>HELL SEX</title>
   <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/style.css">  
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">  
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
  
    <script type="text/javascript" src="assets/js/script.js"></script>
