--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 
 <body bgcolor="black">
-	<a href="assets/linkedpages/wolves.html"><img src="assets/images/bgblack.png" style="width: 100%;"></a>
+	<a href="https://garimathakur.github.io/sextemples/"><img src="assets/images/bgblack.png" style="width: 100%;"></a>
 </body>
 </html>
