--- a/Assets/LinkedPages/wolves.html
+++ b/Assets/LinkedPages/wolves.html
@@ -18,7 +18,7 @@ $('body').fadeIn(500);
 <div dir="rtl" class="style2" style="width: 100%">
 <p align="center"style="width: 90%; height: 30%;" class="style1"></p>
 
-<a href="captive.html"><img src="Assets/Images/wolves.gif" align=right></a>
+<a href="captive.html"><img src="../Images/wolves.gif" align=right></a>
 
 </div>
 
