--- a/Assets/LinkedPages/wolfpack.html
+++ b/Assets/LinkedPages/wolfpack.html
@@ -20,7 +20,7 @@ $('body').fadeIn(500);
 <body bgcolor="black">
 	
 <p align="center"style="width: 90%; height: 50%;" class="style1">
-<a href="yakshi.html"><img src="../images/wolfpack.jpg" width=45% align=right></a></p>
+<a href="yakshi.html"><img src="../Images/wolfpack.jpg" width=45% align=right></a></p>
 
 </div>
 
