--- a/Assets/LinkedPages/devil.html
+++ b/Assets/LinkedPages/devil.html
@@ -16,7 +16,7 @@
  <div class="page-bg">
 <a class="photo" href="devil2.html" title="photo" id="photo"></a>
 
-<img src="..images/devil.jpg">
+<img src="..Images/devil.jpg">
 </div>
 
 
