--- a/Assets/LinkedPages/kama.html
+++ b/Assets/LinkedPages/kama.html
@@ -5,7 +5,7 @@
   <title>..</title>
 
   
-</head><body style="overflow: hidden; background-image: url(../images/gibbonpack.jpg);">
+</head><body style="overflow: hidden; background-image: url(../Images/gibbonpack.jpg);">
 <br>
 
 <br>
