--- a/Assets/LinkedPages/kama.html
+++ b/Assets/LinkedPages/kama.html
@@ -9,5 +9,5 @@
 <br>
 
 <br>
-<div style="text-align: center;"><a href="kama2.html"><img src="../images/circle.gif" alt="circle" style="border: 0px solid ; width: 565px;"></a></div>
+<div style="text-align: center;"><a href="kama2.html"><img src="../Images/circle.gif" alt="circle" style="border: 0px solid ; width: 565px;"></a></div>
 </body></html>
