--- a/Assets/LinkedPages/kama2.html
+++ b/Assets/LinkedPages/kama2.html
@@ -6,5 +6,5 @@
 <br>
 
 <br>
-<div style="text-align: center;"><a href="marqueetext.html"><img src="../images/circlepixel.gif" alt="circle" style="border: 0px solid ; width: 565px;"></a></div>
+<div style="text-align: center;"><a href="marqueetext.html"><img src="../Images/circlepixel.gif" alt="circle" style="border: 0px solid ; width: 565px;"></a></div>
 </body></html>
