--- a/Assets/LinkedPages/kama2.html
+++ b/Assets/LinkedPages/kama2.html
@@ -2,7 +2,7 @@
 <html><head>
 
   
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>..</title></head><body style="overflow: hidden; background-image: url(../images/gibbonpack.jpg);">
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>..</title></head><body style="overflow: hidden; background-image: url(../Images/gibbonpack.jpg);">
 <br>
 
 <br>
