--- a/Assets/LinkedPages/faces07.html
+++ b/Assets/LinkedPages/faces07.html
@@ -13,8 +13,8 @@
 
 <table>
 	<tr height=100%>
-		<td width="25%" name="col1"><a href="fallflat.html"><img src="../images/wolves2.gif" name="img1" id="img1"></a></td>
-		<td width="30%" name="col2"><img src="../images/facegif.gif" name="img2" id="img2"></td>
+		<td width="25%" name="col1"><a href="fallflat.html"><img src="../Images/wolves2.gif" name="img1" id="img1"></a></td>
+		<td width="30%" name="col2"><img src="../Images/facegif.gif" name="img2" id="img2"></td>
 		<td width="30%"></td>
 	</tr>
 </table>
