--- a/Assets/LinkedPages/kill1.html
+++ b/Assets/LinkedPages/kill1.html
@@ -10,7 +10,7 @@
 
 <body>
 	
- <a href="kill2.html"><img src="../Images/kill1.jpg"></a>
+ <a href="kill2.html"><img src="../images/kill1.jpg"></a>
 
 
 
