--- a/Assets/LinkedPages/kill2.html
+++ b/Assets/LinkedPages/kill2.html
@@ -11,11 +11,11 @@
 
 <body onload="myFunction()">
 	
- <img src="../images/kill1.jpg" class="img1">
+ <img src="../Images/kill1.jpg" class="img1">
 
  
 
- 	<a href="kill3.html"><img src="../images/kill02.png" class="img2"></a>
+ 	<a href="kill3.html"><img src="../Images/kill02.png" class="img2"></a>
 
 
 <script type="text/javascript">
