--- a/Assets/LinkedPages/kill2.html
+++ b/Assets/LinkedPages/kill2.html
@@ -11,7 +11,7 @@
 
 <body onload="myFunction()">
 	
- <img src="../images/kill1.jpg" class="img1">
+ <img src="../Images/kill1.jpg" class="img1">
 
  
 
