--- a/Assets/LinkedPages/kill3.html
+++ b/Assets/LinkedPages/kill3.html
@@ -11,11 +11,11 @@
 
 <body onload="myFunction()">
 	
-  	<a href="kill4.html"><img src="../images/kill3.jpg" class="img1"></a>
+  	<a href="kill4.html"><img src="../Images/kill3.jpg" class="img1"></a>
 
  
 
-<img src="../images/kill02.png" class="img2">
+<img src="../Images/kill02.png" class="img2">
 
 
 
