--- a/Assets/LinkedPages/kill4.html
+++ b/Assets/LinkedPages/kill4.html
@@ -13,7 +13,7 @@
 <body onload="myFunction()">
 	
 	
-  	<img src="../images/kill3.jpg" class="img1">
+  	<img src="../Images/kill3.jpg" class="img1">
 
 
 
@@ -24,7 +24,7 @@ To be sent back to her father’s house was the worst disgrace a
 woman could face.</font><font size="3.5em">
 (Draupadi: Palace of Illusions)</font></marquee></a>
 
-<img src="../images/kill02.png" class="img2">
+<img src="../Images/kill02.png" class="img2">
 
 
 
