--- a/Assets/LinkedPages/prayer3.html
+++ b/Assets/LinkedPages/prayer3.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body background="../images/faces.jpg">
+<body background="../Images/faces.jpg">
 	
  <div class="page-bg">
 <a class="photo" href="prayer4.html" title="photo" id="photo"></a>
